--- a/DP/#05.Subsets_count_difference.md
+++ b/DP/#05.Subsets_count_difference.md
@@ -2,53 +2,83 @@
 
 Given an array of numbers, generate subsets S1 and S2 such that S1 U S2 = S and has S1 - S2 = difference.
 
-Concept
+Problem link: https://practice.geeksforgeeks.org/problems/partitions-with-given-difference/1
+
+**Concept**
 ```
 S1 + S2 = sum(array)
 S1 - S2 = diff
 
 Adding both, S1 = (array_sum + diff) / 2
+OR S2 = (array_sum - diff) / 2
 ```
 
-**CPP - DP**
+**C++ - Top-Down**
 ```cpp
-int countSubsets(int  arr[], int sum, int n) {
-	int t[n + 1][sum + 1];
-	memset(t, -1, sizeof(t));
+int mod = 1e9 + 7;
+vector<vector<int>> dp;
+int solve(long long target, vector<int>& arr, int pos) {
+    if (pos == arr.size())
+        return target == 0; //also works for multiple '0's in between
 
-	for (int i = 0; i < n + 1; i++)
-		for (int j = 0; j < sum + 1; j++) {
-			if (i == 0)
-				t[i][j] = 0;
-			if (j == 0)
-				t[i][j] = 1;
-		}
+    if (dp[target][pos] != -1) return dp[target][pos];
 
-	for (int i = 1; i < n + 1; i++)
-		for (int j = 1; j < sum + 1; j++) {
-			if (arr[i - 1] <= j)
-				t[i][j] = t[i - 1][j - arr[i - 1]] + t[i - 1][j];
-			else
-				t[i][j] = t[i - 1][j];
-		}
+    int take = 0;
+    if (arr[pos] <= target)
+        take = solve(target - arr[pos], arr, pos + 1);
 
-	return t[n][sum];
+    int dontTake = solve(target, arr, pos + 1);
+    return dp[target][pos] = ((long long) take + dontTake) % mod;
+}
+
+int countPartitions(int n, int d, vector<int>& arr) {
+    long long totalSum = accumulate(begin(arr), end(arr), 0);
+    long long remainingSum = totalSum - d;
+
+    if (remainingSum < 0) return 0; //useless check
+    if (remainingSum & 1) return 0; //Not possible to split to S1 and S2
+
+    dp.resize(remainingSum / 2 + 1, vector<int>(n, -1));
+    return solve(remainingSum / 2, arr, 0);
+}
+```
+
+
+**C++ - DP**
+```cpp
+int countSubsets(vector<int>& nums, int sum) {
+    int n = nums.size();
+    int t[n + 1][sum + 1];
+    memset(t, -1, sizeof(t));
+
+    for (int i = 0; i <= n; i++)
+        for (int j = 0; j <= sum; j++) {
+            if (i == 0) t[i][j] = 0;
+            if (j == 0) t[i][j] = 1;
+        }
+
+    for (int i = 1; i <= n; i++)
+        for (int j = 1; j <= sum; j++) {
+            if (nums[i - 1] <= j)
+                t[i][j] = t[i - 1][j - nums[i - 1]] + t[i - 1][j];
+            else
+                t[i][j] = t[i - 1][j];
+        }
+
+    return t[n][sum];
 }
 
 int main() {
-	int arr[] = {1, 3, 2, 1};
-	int n = sizeof(arr) / sizeof(arr[0]);
+    vector<int> nums = {1, 3, 2, 1};
+    int diff = 3;
 
-	int diff = 3, arr_sum = 0;
-	for (auto ar : arr)
-		arr_sum += ar;
+    long long totalSum = accumulate(begin(nums), end(nums), 0);
+    long long remainingSum = totalSum - diff;
 
-	if ((arr_sum + diff) % 2 != 0)
-		return 0;
+    //Not possible to split to S1 and S2
+    if (remainingSum % 2 != 0) return 0;
 
-	int sum = (arr_sum + diff) / 2;
-	cout << countSubsets(arr, sum, n);
-
-	return 0;
+    cout << countSubsets(nums, remainingSum / 2);
+    return 0;
 }
 ```
