--- a/Tree/#01.DiameterOfTree.md
+++ b/Tree/#01.DiameterOfTree.md
@@ -5,7 +5,9 @@ The diameter of a binary tree is the length of the longest path between any two 
 This path may or may not pass through the root.
 ```
 
-**Solution**
+Problem link: https://leetcode.com/problems/diameter-of-binary-tree
+
+**C++ Solution**
 ```cpp
 int diameter = 0;
 int findHeights(TreeNode* root){
