added space optmised method

--- a/Arrays/#08.set_matrix_zeros.md
+++ b/Arrays/#08.set_matrix_zeros.md
@@ -15,6 +15,8 @@ Output:
 ]
 ```
 
+With using space complexity of O(M+N), we can solve it as follows.
+
 **Python**
 ```python
 rows = cols = set()
@@ -50,5 +52,96 @@ void setZeroes(vector<vector<int>>& vect) {
                 setZeros(i, j, final_matrix);
     
     vect = final_matrix;
+}
+```
+
+To optimize for space complexity, we can do:
+
+**Python**
+```python
+def setZeroes(self, g: List[List[int]]) -> None:
+    """
+    Do not return anything, modify matrix in-place instead.
+    """
+    isRowZero = False
+    isColZero = False
+
+    m, n = len(g), len(g[0])
+
+    for i in range(m):
+        if g[i][0] == 0:
+            isColZero = True
+            break
+
+    for j in range(n):
+        if g[0][j] == 0:
+            isRowZero = True
+            break
+
+    for i in range(1, m):
+        for j in range(1, n):
+            if g[i][j] == 0:
+                g[i][0] = 0
+                g[0][j] = 0
+
+    for i in range(1, m):
+        for j in range(1, n):
+            if g[0][j] == 0 or g[i][0] == 0:
+                g[i][j] = 0
+
+    if isRowZero:
+        for j in range(n):
+            g[0][j] = 0;
+
+    if isColZero:
+        for i in range(m):
+            g[i][0] = 0
+```
+
+**C++**
+```cpp
+void setZeroes(vector<vector<int>>& g) {
+    int m = g.size(), n = g[0].size();
+    bool isZeroRow = false, isZeroCol = false;
+
+    for(int i=0; i < m; i++){
+        if(g[i][0] == 0){
+            isZeroCol = true;
+            break;
+        }
+    }
+
+    for(int j=0; j < n; j++){
+        if(g[0][j] == 0){
+            isZeroRow = true;
+            break;
+        }
+    }
+
+    for(int i=1; i < m; i++){
+        for(int j=1; j < n; j++){
+            if(g[i][j] == 0){
+                g[i][0] = 0;
+                g[0][j] = 0;
+            }
+        }
+    }
+
+    for(int i=1; i < m; i++){
+        for(int j=1; j < n; j++){
+            if(g[i][0] == 0 || g[0][j] == 0)
+                g[i][j] = 0;
+        }
+    }
+
+    if(isZeroCol){
+        for(int i=0; i < m; i++)
+            g[i][0] = 0;
+    }
+
+    if(isZeroRow){
+        for(int j=0; j < n; j++)
+            g[0][j] = 0;
+    }
 }
 ```
