--- a/Arrays/#04.missing_and_duplicate.md
+++ b/Arrays/#04.missing_and_duplicate.md
@@ -39,3 +39,26 @@ void findMissingDuplicate(vector<int>& nums) {
 
 }
 ```
+
+**Python**
+```python
+def findRepeating(nums):
+	for i in range(len(nums)):
+		if nums[abs(nums[i])-1] < 0:
+			return abs(nums[i])
+		else:
+			nums[abs(nums[i])-1] *= -1
+
+def missingAndRepeating(nums, n):
+	repeat = findRepeating(nums[:])
+
+	missing = 0
+	for i in range(1, n+1):
+		missing ^= i
+	for num in nums:
+		missing ^= num
+	
+	missing ^= repeat
+
+	return missing, repeat
+```
