--- a/Arrays/#04.missing_and_duplicate.md
+++ b/Arrays/#04.missing_and_duplicate.md
@@ -1,6 +1,8 @@
 4. Given an unsorted array of size n. Array elements are in the range from 1 to n. One number from set {1, 2, …n} is missing and one number occurs twice in the array. 
 Find these two numbers.
 
+Problem link: https://www.codingninjas.com/studio/problems/missing-and-repeating-numbers_873366
+
 ```
 Input: arr[] = {3, 1, 3}
 Output: Missing = 2, Repeating = 3
