--- a/Arrays/#47.LargestDivisibleSubset.md
+++ b/Arrays/#47.LargestDivisibleSubset.md
@@ -51,3 +51,35 @@ vector<int> largestDivisibleSubset(vector<int>& nums) {
     return result;
 }
 ```
+
+**Python**
+```python
+def largestDivisibleSubset(self, nums: List[int]) -> List[int]:
+    nums.sort()
+    n = len(nums)
+
+    #Group size is the location at which possible elements can be.
+    # For [1 2 3] 
+    # its  1 2 2  -> This [1,2] or [1,3]
+    groupSize = [1] * n
+    prevElmntIdx = [-1] * n
+    maxIndex = 0
+
+    for i in range(n):
+        for j in range(0, i):
+            if nums[i] % nums[j] == 0:
+                if groupSize[i] < 1 + groupSize[j]:
+                    groupSize[i] = 1 + groupSize[j]
+                    prevElmntIdx[i] = j
+
+        if groupSize[i] > groupSize[maxIndex]:
+            maxIndex = i
+
+    result = []
+    i = maxIndex
+    while i != -1:
+        result.append(nums[i])
+        i = prevElmntIdx[i]
+
+    return result
+```
