--- a/Arrays/#13.3SumProblem.md
+++ b/Arrays/#13.3SumProblem.md
@@ -3,13 +3,36 @@
 Given an array nums of n integers, are there elements a, b, c in nums such that a + b + c = 0? Find all unique triplets in the array which gives the sum of zero.
 
 ```
-Given array nums = [-1, 0, 1, 2, -1, -4],
+Input: nums = [-1,0,1,2,-1,-4]
+Output: [[-1,-1,2],[-1,0,1]]
+```
 
-A solution set is:
-[
-  [-1, 0, 1],
-  [-1, -1, 2]
-]
+**C++**
+```cpp
+vector<vector<int>> threeSum(vector<int>& nums) {
+    int n = nums.size();
+    vector<vector<int>> res;
+    sort(begin(nums), end(nums));
+
+    for(int i=0; i < n; i++){
+        int j = i+1, k = n-1;
+        while(j < k){
+            int twoSum = nums[j] + nums[k];
+            if(twoSum == -nums[i]){
+                res.push_back({nums[i], nums[j], nums[k]});
+
+                int jNum = nums[j], kNum = nums[k];
+                while(j<k && nums[j] == jNum) j++;
+                while(j<k && nums[k] == kNum) k--;
+            }
+            else if(twoSum < -nums[i]) j++;
+            else k--;
+        }
+        while(i+1 < n && nums[i] == nums[i+1]) i++;
+    }
+
+    return res;
+}
 ```
 
 **Python (Best)**
@@ -19,6 +42,8 @@ def threeSum(nums):
     nums.sort()
 
     for i in range(len(nums)-2):
+        #This step is important in python, as otherwise while loop doesn't increment with forloop when written at the end.
+        #Basically skips duplicated
         if i>0 and nums[i] == nums[i-1]:
             continue
 
