--- a/Arrays/#48.LongestSubarrayZeroSum.md
+++ b/Arrays/#48.LongestSubarrayZeroSum.md
@@ -2,6 +2,8 @@
 
 Find the length of the longest subarray whose sum is zero.
 
+Problem link: https://www.codingninjas.com/studio/problems/920321
+
 ```
 Input: nums = [1,3,-1,4,-4]
 Output: 2
