--- a/LinkedList/#04.RemoveNthNodeFromEnd.md
+++ b/LinkedList/#04.RemoveNthNodeFromEnd.md
@@ -1,14 +1,41 @@
-# #4. Remove Nth Node From End of List
+### #4. Remove Nth Node From End of List
 
 Given a linked list, remove the n-th node from the end of list and return its head.
 
+Problem link: https://leetcode.com/problems/remove-nth-node-from-end-of-list/
 
 ```
 Given linked list: 1->2->3->4->5, and n = 2.
 After removing the second node from the end, the linked list becomes 1->2->3->5.
 ```
 
-**Python**
+**Python (Slow Fast Pointers)**
+- This technique initially does padding/shifting "fast" pointer by n steps, and then "slow" and "fast" pointers move together to reach the deletion node.
+- Edge case: deletion of the very first node. Happens when "fast" pointer initially reaches null.
+<img src="https://i.imgur.com/BSiLKj0.png" width=800>
+
+```python
+def removeNthFromEnd(self, head: Optional[ListNode], n: int) -> Optional[ListNode]:
+    slow, fast = head, head
+    for _ in range(n):
+        fast = fast.next
+
+    # when n = size of the linked list, means to remove first node
+    if not fast:
+        return head.next
+
+    while fast.next:
+        slow = slow.next
+        fast = fast.next
+
+    nodeToDelete = slow.next
+    slow.next = slow.next.next
+
+    del nodeToDelete
+    return head
+```
+
+**Python - Value changing (Not preferred)**
 ```python
 def removeNthFromEnd(self, head, n):
     def index(node):
@@ -21,22 +48,4 @@ def removeNthFromEnd(self, head, n):
     
     index(head)
     return head.next
-```
-
-**Python (SF Pointers)**
-```python
-def removeNthFromEnd(self, head, n):
-    fast = slow = head
-    
-    for _ in range(n):
-        fast = fast.next  
-    if not fast:
-        return head.next
-    
-    while fast.next:
-        fast = fast.next
-        slow = slow.next
-    
-    slow.next = slow.next.next
-    return head
 ```
