--- a/Arrays/#03.missing_number.md
+++ b/Arrays/#03.missing_number.md
@@ -1,4 +1,4 @@
-3. **Repeat and Missing Number**
+3. **Missing Number**
 
 Given an array containing n distinct numbers taken from 0, 1, 2, ..., n, find the one that is missing from the array.
 
