--- a/LinkedList/#07.IntersectionLinkedList.md
+++ b/LinkedList/#07.IntersectionLinkedList.md
@@ -6,14 +6,16 @@ For example, the following two linked lists:
 
 ![image](https://user-images.githubusercontent.com/27401142/201523936-ae2f217b-e61c-4325-a6b3-fc0061b806f3.png)
 
+#### Solution Explanation:
+Notice that if list A and list B have the same length, this solution will terminate in no more than 1 traversal; if both lists have different lengths, this solution will terminate in no more than 2 traversals -- in the second traversal, swapping a and b synchronizes a and b before the end of the second traversal. 
 
 **Solution - CPP**
 ```cpp
 ListNode *getIntersectionNode(ListNode *l1, ListNode *l2) {
     ListNode* headA = l1, *headB = l2;
     while(l1 != l2){
-        l1 = l1 ? l1->next : headA;
-        l2 = l2 ? l2->next : headB;
+        l1 = l1 ? l1->next : headB;
+        l2 = l2 ? l2->next : headA;
     }
     return l1;
 }
@@ -21,13 +23,13 @@ ListNode *getIntersectionNode(ListNode *l1, ListNode *l2) {
 
 **Python**
 ```python
-def getIntersectionNode(self, a, b):
-    p = a
-    q = b
-    
-    while p != q:
-        p = a if p is None else p.next
-        q = b if q is None else q.next
-    
-    return p
+def getIntersectionNode(self, l1: ListNode, l2: ListNode) -> Optional[ListNode]:
+    l1Head = l1
+    l2Head = l2
+
+    while l1 != l2:
+        l1 = l1.next if l1 else l2Head
+        l2 = l2.next if l2 else l1Head
+
+    return l1
 ```
