--- a/LinkedList/#10.DetectCycle.md
+++ b/LinkedList/#10.DetectCycle.md
@@ -14,19 +14,16 @@ Explanation: There is a cycle in the linked list, where tail connects to the sec
 
 **Solution - CPP**
 ```cpp
-bool hasCycle(Node *root) {
-    if (root == NULL) return false;
-
-    Node *slow, *fast;
-    slow = fast = root;
-
-    while (slow && fast && fast->next) {
+bool hasCycle(ListNode *head) {
+    if(!head) return false;
+    ListNode* slow, *fast;
+    slow = fast = head;
+    while(fast && fast->next){
         slow = slow->next;
         fast = fast->next->next;
 
-        if (slow == fast) {
+        if(slow == fast)
             return true;
-        }
     }
     return false;
 }
@@ -34,15 +31,16 @@ bool hasCycle(Node *root) {
 
 **Python**
 ```python
-def hasCycle(self, head):
-    try:
-        slow = head
-        fast = head.next
+def hasCycle(self, head: Optional[ListNode]) -> bool:
+    if not head: return head
+    
+    slow, fast = head, head
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
         
-        while slow is not fast:
-            slow = slow.next
-            fast = fast.next.next
-        return True
-    except:
-        return False
+        if slow == fast:
+            return True
+            
+    return False
 ```
