--- a/LinkedList/#09.ReverseNodes_K_Group.md
+++ b/LinkedList/#09.ReverseNodes_K_Group.md
@@ -10,7 +10,32 @@ For k = 2, you should return: 2->1->4->3->5
 For k = 3, you should return: 3->2->1->4->5
 ```
 
-**Python**
+**Python - Recursive**
+```python
+def reverseKGroup(self, head: Optional[ListNode], k: int) -> Optional[ListNode]:
+    if not head: return head
+
+    #Check if the group has < k elements
+    cur = head
+    for _ in range(k):
+        if not cur: return head
+        cur = cur.next
+
+    #Reverse the k group
+    prev = None
+    cur = head
+    for _ in range(k):
+        temp = cur.next
+        cur.next = prev
+        prev = cur
+        cur = temp
+
+    #pass the next head start of the k group
+    head.next = self.reverseKGroup(cur, k)
+    return prev
+```
+
+**Python - Iterative**
 ```python
 def reverseKGroup(self, head, k):
     dummy = jump = ListNode(0)
@@ -30,43 +55,4 @@ def reverseKGroup(self, head, k):
             break
     
     return dummy.next 
-```
-
-**Python**
-```python
-def reverseKGroup(self, head, k):
-    def reverse(head, prev):
-        q = k
-        cur = head
-        while cur and q:
-            cur.next, prev, cur = prev, cur, cur.next
-            q -= 1
-        return prev, head, cur
-    
-    prev = start = main_head = None
-    cur_next = head
-    bool_head = True
-    
-    def check(cur_next):
-        p = 0
-        while cur_next and p < k:
-            cur_next = cur_next.next
-            p += 1
-        return False if p < k else True
-    
-    while check(cur_next):
-        old_temp = start
-        prev, start, cur_next = reverse(cur_next, None)
-        if old_temp is not None:
-            old_temp.next = prev
-        if bool_head:
-            main_head = prev
-            bool_head = False
-    
-    if start is None:
-        main_head = cur_next
-    elif cur_next is not None:
-        start.next = cur_next
-    
-    return main_head
 ```
