--- a/LinkedList/#10.DetectCycle.md
+++ b/LinkedList/#10.DetectCycle.md
@@ -3,6 +3,7 @@
 Given a linked list, determine if it has a cycle in it.
 
 Leetcode link: https://leetcode.com/problems/linked-list-cycle/
+Part II: https://leetcode.com/problems/linked-list-cycle-ii/
 
 ```
 Input: head = [3,2,0,-4], pos = 1
@@ -12,6 +13,7 @@ Explanation: There is a cycle in the linked list, where tail connects to the sec
 
 <img width="280" src="https://assets.leetcode.com/uploads/2018/12/07/circularlinkedlist.png"><br><br>
 
+#### Part I - To check cycle exists
 **Solution - CPP**
 ```cpp
 bool hasCycle(ListNode *head) {
@@ -43,4 +45,30 @@ def hasCycle(self, head: Optional[ListNode]) -> bool:
             return True
             
     return False
+```
+
+#### Part II - To print the cyclic element
+**Python - Just use hasCycle flag**
+```python
+def detectCycle(self, head: Optional[ListNode]) -> Optional[ListNode]:
+    if not head: return head
+
+    hasCycle = False
+    slow, fast = head, head
+    while fast and fast.next:
+        slow = slow.next
+        fast = fast.next.next
+
+        if slow == fast:
+            hasCycle = True
+            break
+
+    if not hasCycle: return None
+
+    slow = head
+    while slow != fast:
+        slow = slow.next
+        fast = fast.next
+
+    return slow
 ```
