--- a/LinkedList/#17.CopyListRandomPointer.md
+++ b/LinkedList/#17.CopyListRandomPointer.md
@@ -1,7 +1,14 @@
 ### #17. Copy List with Random Pointer
 
+Question: Deep copy the linked list having both val and random pointer:
+- val: an integer representing Node.val
+- random_index: the index of the node (range from 0 to n-1) that the random pointer points to, or null if it does not point to any node.
+
 Leetcode: https://leetcode.com/problems/copy-list-with-random-pointer/
+
 Video solution: https://www.youtube.com/watch?v=VNf6VynfpdM&ab_channel=takeUforward
+
+<image src="https://assets.leetcode.com/uploads/2019/12/18/e1.png" width=500>
 
 **Using HashMap**
 ```cpp
@@ -22,7 +29,7 @@ Node* copyRandomList(Node* head) {
 }
 ```
 
-**Most Optimal O(1) space**
+**C++ - Optimal**
 ```cpp
 Node* copyRandomList(Node* head) {
     if (!head) return NULL;
@@ -59,4 +66,41 @@ Node* copyRandomList(Node* head) {
 
     return dummy.next;
 }
+```
+
+**Python**
+```python
+class Solution:
+    def copyRandomList(self, head: 'Optional[Node]') -> 'Optional[Node]':
+        if not head: return head
+        
+        cur = head
+        #setting up next dummy replicated nodes with only values
+        while cur:
+            temp = cur.next
+            cur.next = Node(cur.val)
+            cur.next.next = temp
+            cur = temp
+        
+        #fixing up random pointers
+        cur = head
+        while cur:
+            if cur.random:
+                cur.next.random = cur.random.next
+            cur = cur.next.next
+        
+        dummy = Node(-1)
+        newHead = dummy
+        cur = head
+        
+        #joining interleaved pointer by separate head
+        while cur:
+            newHead.next = cur.next
+            newHead = newHead.next
+            
+            #fixing old pointers
+            cur.next = cur.next.next
+            cur = cur.next
+        
+        return dummy.next
 ```
