--- a/Greedy/#08.MinimumPlatforms.md
+++ b/Greedy/#08.MinimumPlatforms.md
@@ -3,6 +3,8 @@
 * Given arrival and departure times of all trains that reach a railway station. 
 * Find the minimum number of platforms required for the railway station so that no train is kept waiting.
 
+Problem link: https://www.codingninjas.com/studio/problems/minimum-number-of-platforms_799400
+
 ```
 Input: n = 6 
 arr[] = {0900, 0940, 0950, 1100, 1500, 1800}
@@ -13,12 +15,14 @@ Output: 3 platforms
 **Solution**
 ```cpp
 int findPlatform(int arr[], int dep[], int n){
+    # Need to sort separately to get the answer
     sort(arr, arr+n);
     sort(dep, dep+n);
     
     int i = 0, j = 0;
     int res = 0, cnt = 0;
-    
+
+    # This waits till the previous train leaves, otherwise adds new platform
     while(i < n && j < n){
         if(arr[i] <= dep[j]){
             cnt++;
