--- a/DP/MatrixChainMultiplication-DP/#02.PalindromePartioning.md
+++ b/DP/MatrixChainMultiplication-DP/#02.PalindromePartioning.md
@@ -76,3 +76,70 @@ int minCut(string s) {
     return palindromeCut(s, 0, n-1);
 }
 ```
+
+**Python Code - Recursion**
+```python
+class Solution:
+    def partition(self, s: str) -> List[List[str]]:
+        
+        @cache
+        def isPalindrome(word):
+            l, r = 0, len(word)-1
+            while l < r:
+                if word[l] != word[r]:
+                    return False
+                l += 1
+                r -= 1
+            return True    
+
+        n = len(s)
+        res = []
+        sub = []
+        
+        def dfs(pos):
+            if pos == n:
+                res.append(sub[:])
+                return
+
+            cur = ""
+            for i in range(pos, n):
+                cur += s[i]
+                if isPalindrome(cur):
+                    sub.append(cur)
+                    dfs(i+1)
+                    sub.pop()
+
+        dfs(0)
+        return res
+```
+
+**Python - using recursion and index**
+```python
+class Solution:
+    def partition(self, s: str) -> List[List[str]]:
+        
+        @cache
+        def isPalindrome(l, r):
+            if l > r: return True
+            if s[l] != s[r]:
+                return False
+            return isPalindrome(l+1, r-1)
+
+        n = len(s)
+        res = []
+        sub = []
+        
+        def dfs(pos):
+            if pos == n:
+                res.append(sub[:])
+                return
+
+            for i in range(pos, n):
+                if isPalindrome(pos, i):
+                    sub.append(s[pos:i+1])
+                    dfs(i+1)
+                    sub.pop()
+
+        dfs(0)
+        return res
+```
