--- a/Backtracking/#06.Permutations.md
+++ b/Backtracking/#06.Permutations.md
@@ -9,6 +9,11 @@ Output: ABC ACB BAC BCA CBA CAB
 
 <img width="791" alt="Screenshot 2022-06-21 at 12 05 21 AM" src="https://user-images.githubusercontent.com/27401142/174661009-a8c64595-ac25-4e55-8801-2d6a9aef3602.png">
 
+
+Problem link: https://leetcode.com/problems/permutations/
+
+Solution explained: https://www.geeksforgeeks.org/print-all-possible-permutations-of-an-array-vector-without-duplicates-using-backtracking/
+
 Steps:
 - At each level, we get new character to swap and add to the level.
 
@@ -26,4 +31,27 @@ void permute(string s, int level = 0) {
         swap(s[i], s[level]);
     }
 }
+```
+
+
+Similarly for numbers array,
+**Python**
+```python
+class Solution:
+    def permute(self, nums: List[int]) -> List[List[int]]:
+        res = []
+        n = len(nums)
+
+        def dfs(pos):
+            if pos == n:
+                res.append(nums[:])
+                return
+            
+            for i in range(pos, n):
+                nums[i], nums[pos] = nums[pos], nums[i]
+                dfs(pos+1)
+                nums[i], nums[pos] = nums[pos], nums[i]
+        
+        dfs(0)
+        return res
 ```
