--- a/BinarySearch/#06.SearchInARotatedArray.md
+++ b/BinarySearch/#06.SearchInARotatedArray.md
@@ -1,12 +1,13 @@
 ### #06. Search In A Rotated Array
 
+Leetcode link: https://leetcode.com/problems/search-in-rotated-sorted-array/
 
 ```
 Input: nums = [4,5,6,7,0,1,2], target = 0
 Output: 4
 ```
 
-**Code**
+**C++**
 ```cpp
 int search(vector<int>& nums, int target) {
     int n = nums.size();
@@ -35,4 +36,30 @@ int search(vector<int>& nums, int target) {
     }
     return -1;
 }
+```
+
+**Python**
+```python
+def search(self, nums: List[int], target: int) -> int:
+    n = len(nums)
+    lo, hi = 0, n-1
+    
+    while lo <= hi:
+        mid = (lo+hi) // 2
+        if nums[mid] == target:
+            return mid
+        # Always find which is the sorted side, and check if target exists.
+        # Else switch to other side
+        elif nums[lo] <= nums[mid]:
+            if target < nums[mid] and target >= nums[lo]:
+                hi = mid - 1
+            else:
+                lo = mid + 1
+        else:
+            if target > nums[mid] and target <= nums[hi]:
+                lo = mid + 1
+            else:
+                hi = mid - 1
+    
+    return -1
 ```
