--- a/Tree/#01.DiameterOfTree.md
+++ b/Tree/#01.DiameterOfTree.md
@@ -7,6 +7,8 @@ This path may or may not pass through the root.
 
 Problem link: https://leetcode.com/problems/diameter-of-binary-tree
 
+<img src="https://assets.leetcode.com/uploads/2021/03/06/diamtree.jpg" width=300>
+
 **C++ Solution**
 ```cpp
 int diameter = 0;
@@ -24,4 +26,22 @@ int diameterOfBinaryTree(TreeNode* root) {
     findHeights(root);
     return diameter;
 }
+```
+
+**Python**
+```python
+def diameterOfBinaryTree(self, root: Optional[TreeNode]) -> int:
+    self.diameter = 0
+
+    def dfs(root):
+        if not root: return 0
+
+        lh = dfs(root.left)
+        rh = dfs(root.right)
+
+        self.diameter = max(self.diameter, lh + rh)
+        return 1 + max(lh, rh)
+    
+    dfs(root)
+    return self.diameter
 ```
