--- a/Tree/#05.BalancedTree.md
+++ b/Tree/#05.BalancedTree.md
@@ -7,6 +7,10 @@ Given a binary tree, determine if it is height-balanced.
 A Tree is said to be balanced if abs(lHeight - rHeight) <= 1
 ```
 
+Example: The below is a valid balanced tree.
+
+<img src="https://assets.leetcode.com/uploads/2020/10/06/balance_1.jpg" width=300> 
+
 **Solution (Optimal)**
 ```cpp
 int findHeights(TreeNode* root){
@@ -47,4 +51,30 @@ bool isBalanced(TreeNode* root) {
     findHeights(root);
     return checkBalanced(root);
 }
+```
+
+**Python**
+```python
+from collections import defaultdict
+
+class Solution:
+    def isBalanced(self, root: Optional[TreeNode]) -> bool:
+        if not root: return True
+
+        depth = defaultdict(int)
+        def findDepth(node):
+            if not node: return 0
+            depth[node] = 1 + max(findDepth(node.left), findDepth(node.right))
+            return depth[node]
+
+        def isBalanced(root):
+            if not root: return True
+
+            lh = depth[root.left] if root.left else 0
+            rh = depth[root.right] if root.right else 0
+
+            return abs(lh - rh) <= 1 and isBalanced(root.left) and isBalanced(root.right)
+        
+        findDepth(root)
+        return isBalanced(root)
 ```
