--- a/Tree/#02.IsSameTree.md
+++ b/Tree/#02.IsSameTree.md
@@ -6,7 +6,7 @@ Leetcode link: https://leetcode.com/problems/same-tree/
 Given the roots of two binary trees p and q, write a function to check if they are the same or not.
 ```
 
-**Solution**
+**C++**
 ```cpp
 bool isSameTree(TreeNode* p, TreeNode* q) {
     if(!p && !q) return true;
@@ -15,4 +15,15 @@ bool isSameTree(TreeNode* p, TreeNode* q) {
     return (p->val == q->val) && isSameTree(p->left, q->left) && 
         isSameTree(p->right, q->right);
 }
+```
+
+**Python**
+```python
+def isSameTree(self, p: Optional[TreeNode], q: Optional[TreeNode]) -> bool:
+    if not p and not q:
+        return True
+    if not p or not q:
+        return False
+    
+    return p.val == q.val and self.isSameTree(p.left, q.left) and self.isSameTree(p.right, q.right)
 ```
