--- a/Tree/#13.lowestCommonAncestorBinaryTree.md
+++ b/Tree/#13.lowestCommonAncestorBinaryTree.md
@@ -1,6 +1,22 @@
 ### #13. Lowest Common Ancestor
 
-Leetcode: https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/
+Leetcode Link: https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/
+
+![image](https://github.com/geekykant/SDE-Placement-Interview/assets/27401142/1962d085-7b77-4f53-a8ed-db5a52e87d95)
+![image](https://github.com/geekykant/SDE-Placement-Interview/assets/27401142/900ce506-8588-4650-bb6b-c0ac92496312)
+
+
+```
+Example 1:
+Input: root = [3,5,1,6,2,0,8,null,null,7,4], p = 5, q = 1
+Output: 3
+Explanation: The LCA of nodes 5 and 1 is 3.
+
+Example 2:
+Input: root = [3,5,1,6,2,0,8,null,null,7,4], p = 5, q = 4
+Output: 5
+Explanation: The LCA of nodes 5 and 4 is 5, since a node can be a descendant of itself according to the LCA definition.
+```
 
 **Recursion**
 ```cpp
@@ -16,6 +32,27 @@ TreeNode* lowestCommonAncestor(TreeNode* root, TreeNode* p, TreeNode* q) {
 
     return left ? left : right;
 }
+```
+
+**Python**
+```python
+def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':
+    if not root: return None
+    if root == p or root == q:
+        return root
+    
+    left = self.lowestCommonAncestor(root.left, p, q)
+    right = self.lowestCommonAncestor(root.right, p, q)
+
+    if left and right:
+        return root
+    
+    if left:
+        return left
+    elif right:
+        return right
+    
+    return None
 ```
 
 **Long Way**
