--- a/Arrays/#42.MaximumProductSubArray.md
+++ b/Arrays/#42.MaximumProductSubArray.md
@@ -21,6 +21,24 @@ int maxProduct(vector<int>& nums) {
 }
 ```
 
+**Python**
+```python
+int maxProduct(vector<int>& nums) {
+    int res = INT_MIN, n = nums.size();
+    int minProd = 1, maxProd = 1;
+    for(int num: nums){
+        if(num < 0)
+            swap(minProd, maxProd);
+        
+        minProd = min(minProd * num, num);
+        maxProd = max(maxProd * num, num);
+        
+        res = max(res, maxProd);
+    }
+    return res;
+}
+```
+
 
 Next Code Insights:
 * If an array is fully +ve, we can directly take longest subarray product.
