--- a/BinarySearch/#03.LongestIncreasingSubseq.md
+++ b/BinarySearch/#03.LongestIncreasingSubseq.md
@@ -1,9 +1,15 @@
 ### #03. Longest Increasing Subsequence
 
+Leetcode link: https://leetcode.com/problems/longest-increasing-subsequence/
+
 ```
 Input: [5,4,11,1,16,8]
 Output: 3, which is [5,11,16]
 ```
+
+Solution 
+- DP - https://www.youtube.com/watch?v=IFfYfonAFGc
+- Binary Search - https://www.youtube.com/watch?v=on2hvxBXJH4
 
 **Binary Search**
 > Note: this **does NOT finds** the "LIS" as such, but only the **COUNT**
@@ -24,7 +30,7 @@ int longestIncreasingSubseq(string s) {
 }
 ```
 
-**Extended BS Code**
+**Same Lower Bound - using lo, hi**
 ```cpp
 int longestIncreasingSubseq(string s) {
     vector<int> temp;
@@ -46,4 +52,58 @@ int longestIncreasingSubseq(string s) {
     }
     return temp.size();
 }
+```
+
+### Method 2 - Useful to print LIS
+
+**Python - Tabulation**
+TC: O(N^2)
+```python
+def lengthOfLIS(self, nums: List[int]) -> int:
+    n = len(nums)
+    dp = [1] * n
+    maxLIS = 1
+    
+    for i in range(n):
+        for prev in range(0, i):
+            if nums[prev] < nums[i]:
+                dp[i] = max(dp[i], 1 + dp[prev])
+            
+        maxLIS = max(maxLIS, dp[i])
+    
+    return maxLIS
+```
+
+**Python - Printing LIS**
+```python
+def lengthOfLIS(self, nums: List[int]) -> int:
+    n = len(nums)
+    dp = [1] * n
+    
+    maxLIS = 1
+    lastIndex = 0          # Notes the last index in our maxLIS result
+    prevIdx = [-1] * n     # We keep storing previous index list
+
+    for i in range(n):
+        for prev in range(0, i):
+            if nums[prev] < nums[i] and dp[i] < 1 + dp[prev]:
+                dp[i] = 1 + dp[prev]
+                prevIdx[i] = prev
+
+        if dp[i] > maxLIS:
+            maxLIS = dp[i]
+            lastIndex = i
+
+    # With the help of lastIndex, we use the 
+    res = []
+    while True:
+        res.append(nums[lastIndex])
+        lastIndex = prevIdx[lastIndex]
+        if lastIndex == -1:
+            break
+    
+    res.reverse()
+    print(res)  # Prints the LIS
+
+    return maxLIS
 ```
