--- a/DP/#10.LongestCommonInSubseq.md
+++ b/DP/#10.LongestCommonInSubseq.md
@@ -7,108 +7,122 @@ Input: text1 = "abcde", text2 = "ace"
 Output: 3
 ```
 
-**CPP - DP (Recursion)**
+**CPP - Recursion**
 ```cpp
 int matchSeq(string a, string b, int m, int n) {
-	if (m == 0 || n == 0)
-		return 0;
+    if (m == 0 || n == 0)
+        return 0;
 
-	if (a[m - 1] == b[n - 1])
-		return 1 + matchSeq(a, b, m - 1, n - 1);
+    if (a[m - 1] == b[n - 1])
+        return 1 + matchSeq(a, b, m - 1, n - 1);
 
-	return max(matchSeq(a, b, m - 1, n), matchSeq(a, b, m, n - 1));
+    return max(matchSeq(a, b, m - 1, n), matchSeq(a, b, m, n - 1));
 }
 ```
 
-**CPP (Tabulation) DP**
+**Python - Recursion**
+```python
+def longestCommonSubsequence(self, s1: str, s2: str) -> int:
+    @cache
+    def lcs(i, j):
+        if i == len(s1) or j == len(s2):
+            return 0
+        
+        if s1[i] == s2[j]:
+            return 1 + lcs(i+1, j+1)
+        
+        return max(lcs(i+1, j), lcs(i, j+1))
+    
+    return lcs(0, 0)
+```
+
+
+**CPP - Tabulation**
 ```cpp
 int commonString(string a, string b, int m, int n) {
-	int t[m + 1][n + 1];
+    int t[m + 1][n + 1];
 
-	for (int i = 0; i < m + 1; i++)
-		for (int j = 0; j < n + 1; j++)
-			if (i == 0 || j == 0)
-				t[i][j] = 0;
-			else if (a[i - 1] == b[j - 1])
-				t[i][j] = 1 + t[i - 1][j - 1];
-			else
-				t[i][j] = max(t[i - 1][j], t[i][j - 1]);
+    for (int i = 0; i < m + 1; i++)
+        for (int j = 0; j < n + 1; j++)
+            if (i == 0 || j == 0)
+                t[i][j] = 0;
+            else if (a[i - 1] == b[j - 1])
+                t[i][j] = 1 + t[i - 1][j - 1];
+            else
+                t[i][j] = max(t[i - 1][j], t[i][j - 1]);
 
-	return t[m][n];
+    return t[m][n];
 }
 ```
 
-**CPP - DP (Tabulation)**
-```cpp
-int matchSeq(string a, string b, int m, int n) {
-	int t[m + 1][n + 1];
+**Python - Tabulation**
+```python
+def longestCommonSubsequence(self, s1: str, s2: str) -> int:
+    n, m = len(s1), len(s2)
+    dp = [[0] * (m+1) for _ in range(n+1)]
 
-	for (int i = 0; i < m + 1; i++)
-		for (int j = 0; j < n + 1; j++)
-			if (i == 0 || j == 0)
-				t[i][j] = 0;
-
-	for (int i = 1; i < m + 1; i++)
-		for (int j = 1; j < n + 1; j++)
-			if (a[i - 1] == b[j - 1])
-				t[i][j] = 1 + t[i - 1][j - 1];
-			else
-				t[i][j] = max(t[i - 1][j], t[i][j - 1]);
-
-	return t[m][n];
-}
+    for i in range(1, n+1):
+        for j in range(1, m+1):
+            if s1[i-1] == s2[j-1]:
+                dp[i][j] = 1 + dp[i-1][j-1]
+            else:
+                dp[i][j] = max(dp[i-1][j], dp[i][j-1])
+    
+    return dp[n][m]
 ```
 
 
-### Largest Substring
+#### Largest Substring
 
 **CPP**
 ```cpp
 int countCommon(string a, string b, int m, int n) {
-	int t[m + 1][n + 1];
-	int best_count = 0;
+    int t[m + 1][n + 1];
+    int best_count = 0;
 
-	for (int i = 1; i < m + 1; i++)
-		for (int j = 1; j < n + 1; j++)
-			if (a[i - 1] == b[j - 1]) {
-				t[i][j] = 1 + t[i - 1][j - 1];
-				best_count = max(t[i][j], best_count);
-			}
-			else
-				t[i][j] = 0;
+    for (int i = 1; i < m + 1; i++)
+        for (int j = 1; j < n + 1; j++)
+            if (a[i - 1] == b[j - 1]) {
+                t[i][j] = 1 + t[i - 1][j - 1];
+                best_count = max(t[i][j], best_count);
+            }
+            else
+                t[i][j] = 0;
 
-	return best_count;
+    return best_count;
 }
 ```
-### Printing Longest Subtring
+
+
+#### Printing Longest Substring
 
 **CPP**
 ```cpp
 string countCommon(string a, string b, int m, int n) {
-	int t[m + 1][n + 1];
-	int best_count = 0;
+    int t[m + 1][n + 1];
+    int best_count = 0;
 
-	for (int i = 1; i < m + 1; i++)
-		for (int j = 1; j < n + 1; j++)
-			if (a[i - 1] == b[j - 1]) {
-				t[i][j] = 1 + t[i - 1][j - 1];
-				best_count = max(t[i][j], best_count);
-			}
-			else
-				t[i][j] = 0;
+    for (int i = 1; i < m + 1; i++)
+        for (int j = 1; j < n + 1; j++)
+            if (a[i - 1] == b[j - 1]) {
+                t[i][j] = 1 + t[i - 1][j - 1];
+                best_count = max(t[i][j], best_count);
+            }
+            else
+                t[i][j] = 0;
 
-	int i = m, j = n;
-	string output = "";
+    int i = m, j = n;
+    string output = "";
 
-	while (i > 0 && j > 0) {
-		if (a[i - 1] == b[i - 1]) {
-			output.push_back(a[i - 1]);
-			i--; j--;
-		} else
-			t[i][j - 1] > t[i - 1][j] ? j-- : i--;
-	}
-	reverse(output.begin(), output.end());
+    while (i > 0 && j > 0) {
+        if (a[i - 1] == b[i - 1]) {
+            output.push_back(a[i - 1]);
+            i--; j--;
+        } else
+            t[i][j - 1] > t[i - 1][j] ? j-- : i--;
+    }
+    reverse(output.begin(), output.end());
 
-	return output;
+    return output;
 }
 ```
