--- a/DP/#10.LongestCommonInSubseq.md
+++ b/DP/#10.LongestCommonInSubseq.md
@@ -71,6 +71,37 @@ def longestCommonSubsequence(self, s1: str, s2: str) -> int:
     return dp[n][m]
 ```
 
+**Python - Print Longest Common Subsequence**
+```python
+def longestCommonSubsequence(self, s1: str, s2: str) -> int:
+    n, m = len(s1), len(s2)
+    dp = [[0] * (m+1) for _ in range(n+1)]
+
+    for i in range(1, n+1):
+        for j in range(1, m+1):
+            if s1[i-1] == s2[j-1]:
+                dp[i][j] = 1 + dp[i-1][j-1]
+            else:
+                dp[i][j] = max(dp[i-1][j], dp[i][j-1])
+    
+    res = ""
+    i, j = n, m
+    while i > 0 and j > 0:
+        if s1[i-1] == s2[j-1]:
+            res += s1[i-1]
+            i -= 1
+            j -= 1
+        elif dp[i][j-1] > dp[i-1][j]:
+            j -= 1
+        else:
+            i -= 1
+    
+    res = res[::-1]
+    print(res) # Will print the LCS
+    
+    return dp[n][m]
+```
+
 
 #### Largest Substring
 
