--- a/DP/#10.LongestCommonInSubseq.md
+++ b/DP/#10.LongestCommonInSubseq.md
@@ -36,6 +36,7 @@ def longestCommonSubsequence(self, s1: str, s2: str) -> int:
     return lcs(0, 0)
 ```
 
+![image](https://github.com/geekykant/SDE-Placement-Interview/assets/27401142/2bf453d1-f78a-405c-ba15-0d15930dfdd8)
 
 **CPP - Tabulation**
 ```cpp
