--- a/Strings/#14.EditDistance.md
+++ b/Strings/#14.EditDistance.md
@@ -40,21 +40,23 @@ public:
 
 **Python**
 ```python
-@cache
-def minDist(i = 0, j = 0):
-    if i == len(s1):
-        return len(s2) - j
-    if j == len(s2):
-        return len(s1) - i
-    
-    if s1[i] == s2[j]:
-        return minDist(i+1, j+1)
-    
-    insert = minDist(i, j+1)
-    replace = minDist(i+1, j+1)
-    delete = minDist(i+1, j)
+class Solution:
+    def minDistance(self, s1: str, s2: str) -> int:
+        @cache
+        def minDist(i = 0, j = 0):
+            if i == len(s1):
+                return len(s2) - j
+            if j == len(s2):
+                return len(s1) - i
+            
+            if s1[i] == s2[j]:
+                return minDist(i+1, j+1)
+            
+            insert = minDist(i, j+1)
+            replace = minDist(i+1, j+1)
+            delete = minDist(i+1, j)
 
-    return 1 + min(insert, replace, delete)
-
-return minDist()
+            return 1 + min(insert, replace, delete)
+        
+        return minDist()
 ```
