--- a/DP/#09.CoinChange.md
+++ b/DP/#09.CoinChange.md
@@ -4,6 +4,8 @@ You are given an integer array coins representing coins of different denominatio
 
 **You have an infinite number of each kind of coin.**
 
+Leetcode link: https://leetcode.com/problems/coin-change/
+
 ```
 coin[] = {1, 2, 3, 4};
 sum = 5;
