--- a/Backtracking/#07.WordBreak.md
+++ b/Backtracking/#07.WordBreak.md
@@ -1,6 +1,8 @@
-# #7. Word Break Problem
+### #7. Word Break Problem
 
 Given a dictionary array of words and a string. Split the words as per the words available in the dictionary.
+
+Leetcode link: https://leetcode.com/problems/word-break/
 
 ```
 Input: s="leetcode", wordDict = {"leet", "code"}
@@ -10,36 +12,58 @@ Ouput: leet code
 **CPP - Backtracking**
 ```cpp
 bool isInWordDict(string s) {
-	vector<string> wordDict = {"leet", "code"};
+    vector<string> wordDict = {"leet", "code"};
 
-	for (int i = 0; i < wordDict.size(); i++) {
-		if (wordDict[i].compare(s) == 0) {
-			return true;
-		}
-	}
-	return false;
+    for (int i = 0; i < wordDict.size(); i++) {
+        if (wordDict[i].compare(s) == 0) {
+            return true;
+        }
+    }
+    return false;
 }
 
-void wordBreak(string str, int n, string result = "")
-{
-	for (int i = 1; i <= n; i++) {
-		string prefix = str.substr(0, i);
+void wordBreak(string str, int n, string result = ""){
+    for (int i = 1; i <= n; i++) {
+        string prefix = str.substr(0, i);
 
-		if (isInWordDict(prefix)) {
-			if (i == n) {
-				result += prefix;
-				cout << result << endl;
-				return;
-			}
+        if (isInWordDict(prefix)) {
+            if (i == n) {
+                result += prefix;
+                cout << result << endl;
+                return;
+            }
 
-			wordBreak(str.substr(i, n - i), n - i, result + prefix + " ");
-		}
-	}
+            wordBreak(str.substr(i, n - i), n - i, result + prefix + " ");
+        }
+    }
 }
 
 int main() {
-	string s = "leetcode";
-	wordBreak(s, s.size());
-	return 0;
+    string s = "leetcode";
+    wordBreak(s, s.size());
+    return 0;
 }
+```
+
+**Python - Recursion**
+```python
+def wordBreak(self, s: str, wordDict: List[str]) -> bool:
+    wordDict = set(wordDict)
+    n = len(s)
+    
+    @cache
+    def dfs(pos):
+        if pos == n:
+            return True
+    
+        word = ""
+        for i in range(pos, n):
+            word += s[i]
+            if word in wordDict:
+                if dfs(i+1):
+                    return True
+        
+        return False
+
+    return dfs(0)
 ```
