--- a/Tree/#04 .ChildrenSumProperty.md
+++ b/Tree/#04 .ChildrenSumProperty.md
@@ -1,20 +1,42 @@
-## #4. Children Sum Property
+### #4. Children Sum Property
 
+Return true if all non-leaf nodes in a given binary tree have a value that is equal to the sum of their JUST BELOW child nodes, otherwise return false.
+
+Leetcode link: https://www.codingninjas.com/studio/problems/children-sum-property_8357239
+
+<img src="https://github.com/geekykant/SDE-Placement-Interview/assets/27401142/fde78655-d926-4004-b8a8-d8cd1fb6c7e8" width=500>
+
+**C++**
 ```cpp
 bool childrenSumProperty(Node* root) {
-	if (root == NULL)
-		return true;
+    if (!root)
+        return true;
 
-	if (root->left == NULL && root->right == NULL)
-		return true;
+    if (!root->left && !root->right)
+        return true;
 
-	int sum = 0;
-	if (root->left != NULL)
-		sum += root->left->key;
-	if (root->right != NULL)
-		sum += root->right->key;
+    int sum = 0;
+    if (root->left)
+        sum += root->left->key;
+    if (root->right)
+        sum += root->right->key;
 
-	return (root->key == sum && childrenSumProperty(root->left)
-	        && childrenSumProperty(root->right));
+    return (root->key == sum && childrenSumProperty(root->left) && childrenSumProperty(root->right));
 }
+```
+
+**Python**
+```python
+def isParentSum(root):
+    if not node:
+        return True
+
+    if not node.left and not node.right:
+        return True
+    
+    leftSum = node.left.data if node.left else 0
+    rightSum = node.right.data if node.right else 0
+    curRes = node.data == leftSum + rightSum
+
+    return curRes and isParentSum(node.left) and isParentSum(node.right)
 ```
