--- a/Tree/#10.InvertBinaryTree.md
+++ b/Tree/#10.InvertBinaryTree.md
@@ -1,34 +1,31 @@
 ### #10. Invert Binary Tree
 
-```
-Input:
-     4
-   /   \
-  2     7
- / \   / \
-1   3 6   9
+Given the root of a binary tree, invert the tree, and return its root.
 
-Output:
-     4
-   /   \
-  7     2
- / \   / \
-9   6 3   1
+Leetcode link: https://leetcode.com/problems/invert-binary-tree/
 
-```
+<img src="https://assets.leetcode.com/uploads/2021/03/14/invert1-tree.jpg" width=500>
 
-**CODE - CPP**
+**C++**
 ```cpp
 Node* invertTree(Node *root) {
-	if (root == NULL) return NULL;
+    if (root == NULL) return NULL;
 
-	Node *temp = root->left;
-	root->left = root->right;
-	root->right = temp;
+    Node *temp = root->left;
+    root->left = root->right;
+    root->right = temp;
 
-	invertTree(root->left);
-	invertTree(root->right);
+    invertTree(root->left);
+    invertTree(root->right);
 
-	return root;
+    return root;
 }
+```
+
+**Python**
+```python
+def invertTree(self, root: Optional[TreeNode]) -> Optional[TreeNode]:
+    if not root: return root
+    root.left, root.right = self.invertTree(root.right), self.invertTree(root.left)
+    return root
 ```
