--- a/Graph/#17.CourseSchedule.md
+++ b/Graph/#17.CourseSchedule.md
@@ -14,6 +14,36 @@ Explanation: There are a total of 2 courses to take.
 To take course 1 you should have finished course 0. So it is possible.
 ```
 
+**Python - DFS**
+```python
+def canFinish(self, n: int, prerequisites: List[List[int]]) -> bool:
+    state = [0] * n #unvisited state
+    graph = collections.defaultdict(list)
+
+    for u,v in prerequisites:
+        graph[v].append(u)
+    
+    @cache
+    def hasCycle(node):
+        if state[node] == 2: return False # Checks already processed
+        if state[node] == 1: return True # Checks already visited
+        
+        state[node] = 1 #visited state
+
+        for child in graph[node]:
+            if hasCycle(child):
+                return True
+        
+        state[node] = 2 # processed state
+        return False
+    
+    for i in range(n):
+        if hasCycle(i):
+            return False
+    
+    return True
+```
+
 **Python - Using Kahns Alog (Not recommended)**
 ```python
 from queue import Queue
